# fastapi-template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
app/: main.py
app/abstractions/filters/: filter_strategy.py  sort_strategy.py
app/abstractions/repositories/: crud_abstract.py
app/core/: config.py
app/db/: database.py
app/enums/: filter.py  sort.py
app/exceptions/: base.py  filters.py  hero.py  responses.py  sorting.py
app/interfaces/: crud_abstract.py  filter_strategy.py
app/models/: hero.py  response.py
app/models/mixins/: filterable_mixin.py  sortable_mixin.py
app/models/orm/: base.py  hero.py
app/repositories/: base_repository.py  hero_repository.py
app/repositories/strategies/: generic_filter_strategy.py  generic_sort_strategy.py  hero_filter_strategy.py  hero_sort_strategy.py
app/routes/: test.py
app/services/: hero_service.py
app/strategies/: hero_filter_strategy.py
app/utils/: response.py
app/utils/filters/: filter_parser.py  filter_validator.py  filter_value_converter.py
app/utils/sorting/: sort_parser.py  sort_validator.py
docs/: README.md  architecture.md  development-guide.md  examples.md  usage-guide.md
migrations/: env.py
migrations/versions/: 70020ca0e894_initial_migration.py
tests/: conftest.py
tests/fixtures/: filter_sort_fixtures.py  hero_fixtures.py  repository_fixtures.py  response_fixtures.py  utils_fixtures.py
tests/integration/test_api/: test_hero_api.py
tests/unit/: conftest.py
tests/unit/test_models/: test_base_model.py  (+1 more)
(+7 files in other folders)
